Add more sub-projects by using gradle

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,6 @@
 rootProject.name = 'test'
-
+include 'java-test'
+include 'java-test:common'
+include 'java-test:app'
+include 'java-test:mapreduce'
+include 'java-test:spark'
