Add Drill module

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,6 @@ rootProject.name = 'test'
 include 'java-test'
 include 'java-test:common'
 include 'java-test:app'
+include 'java-test:drill'
 include 'java-test:mapreduce'
 include 'java-test:spark'
