Add hbase test project

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,4 @@ include 'java-test:app'
 include 'java-test:drill'
 include 'java-test:mapreduce'
 include 'java-test:spark'
+include 'java-test:hbase'
