--- a/java-test/build.gradle
+++ b/java-test/build.gradle
@@ -9,5 +9,7 @@ subprojects {
 
         compile 'commons-io:commons-io:2.4'
         compile 'com.google.code.gson:gson:2.3.1'
+        compile 'org.apache.httpcomponents:httpclient:4.5.2'
+        compile 'org.apache.httpcomponents:httpmime:4.5.2'
     }
 }
