--- a/settings.gradle
+++ b/settings.gradle
@@ -6,3 +6,5 @@ include 'java-test:drill'
 include 'java-test:mapreduce'
 include 'java-test:spark'
 include 'java-test:hbase'
+include 'scala-test'
+include 'scala-test:app'
