Add light4j and logback examples

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,5 +7,6 @@ include 'java-test:drill'
 include 'java-test:mapreduce'
 include 'java-test:spark'
 include 'java-test:hbase'
+include 'java-test:light4j'
 include 'scala-test'
 include 'scala-test:app'
