--- a/build.gradle
+++ b/build.gradle
@@ -53,16 +53,13 @@ project(':common') {
         compile 'org.apache.httpcomponents:httpasyncclient:4.1.3'
         compile 'org.apache.httpcomponents:httpclient:4.5.2'
         compile 'org.apache.httpcomponents:httpmime:4.5.2'
+        compile 'ch.qos.logback:logback-classic:1.2.3'
     }
 }
 
 project(':java-test') {
     allprojects {
         group 'com.sensetime.test.java.test'
-
-        dependencies {
-            compile 'ch.qos.logback:logback-classic:1.2.3'
-        }
     }
 
     subprojects {
@@ -134,6 +131,33 @@ project(':java-test') {
             compile 'org.apache.spark:spark-streaming_2.10:1.5.1'
             compile 'org.apache.spark:spark-streaming-kafka_2.10:1.5.1'
             compile 'org.apache.spark:spark-sql_2.10:1.5.1'
+        }
+    }
+
+    project(':java-test:light4j') {
+        shadowJar {
+            exclude 'config/audit.yml'
+            exclude 'config/body.yml'
+            exclude 'config/client.yml'
+            exclude 'config/exception.yml'
+            exclude 'config/info.yml'
+            exclude 'config/jwt.yml'
+            exclude 'config/secret.yml'
+            exclude 'config/security.yml'
+            exclude 'config/server.yml'
+            exclude 'config/status.yml'
+            exclude 'logback-test.xml'
+        }
+
+        mainClassName = 'com.networknt.server.Server'
+
+        dependencies {
+            compile 'com.networknt:config:1.5.8'
+            compile 'com.networknt:utility:1.5.8'
+            compile 'com.networknt:status:1.5.8'
+            compile 'com.networknt:server:1.5.8'
+            compile 'com.networknt:body:1.5.8'
+            compile 'com.networknt:handler:1.5.8'
         }
     }
 }
