--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,6 @@ buildscript {
     }
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.4'
-}
-
 allprojects {
     repositories {
         mavenCentral()
@@ -83,7 +79,7 @@ project(':java-test') {
             compile 'org.apache.hadoop:hadoop-client:2.7.1'
             compile 'org.apache.hbase:hbase-client:1.1.2'
             compile 'net.lingala.zip4j:zip4j:1.3.2'
-            compile 'org.apache.poi:poi-ooxml:3.17'
+            compile 'org.apache.poi:poi-ooxml:3.16'
             compile 'org.jsoup:jsoup:1.10.2'
             compile 'org.eclipse.jgit:org.eclipse.jgit:5.0.2.201807311906-r'
         }
@@ -133,6 +129,33 @@ project(':java-test') {
             compile 'org.apache.spark:spark-streaming_2.10:1.5.1'
             compile 'org.apache.spark:spark-streaming-kafka_2.10:1.5.1'
             compile 'org.apache.spark:spark-sql_2.10:1.5.1'
+        }
+    }
+
+    project(':java-test:light4j') {
+        shadowJar {
+            exclude 'config/audit.yml'
+            exclude 'config/body.yml'
+            exclude 'config/client.yml'
+            exclude 'config/exception.yml'
+            exclude 'config/info.yml'
+            exclude 'config/jwt.yml'
+            exclude 'config/secret.yml'
+            exclude 'config/security.yml'
+            exclude 'config/server.yml'
+            exclude 'config/status.yml'
+            exclude 'logback-test.xml'
+        }
+
+        mainClassName = 'com.networknt.server.Server'
+
+        dependencies {
+            compile 'com.networknt:config:1.5.8'
+            compile 'com.networknt:utility:1.5.8'
+            compile 'com.networknt:status:1.5.8'
+            compile 'com.networknt:server:1.5.8'
+            compile 'com.networknt:body:1.5.8'
+            compile 'com.networknt:handler:1.5.8'
         }
     }
 }
