--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,5 @@
 rootProject.name = 'test'
 include 'common'
-include 'java-test'
 include 'java-test:app'
 include 'java-test:jna'
 include 'java-test:drill'
@@ -8,5 +7,6 @@ include 'java-test:mapreduce'
 include 'java-test:spark'
 include 'java-test:hbase'
 include 'java-test:light4j'
-include 'scala-test'
+include 'java-test:spring'
+include 'java-test:spring-grpc'
 include 'scala-test:app'
